# awesome-rig

./: LICENSE  README.md  interactive_storytelling.rs
advanced_pid_controller_tuner_example/: Cargo.toml  README.md
advanced_pid_controller_tuner_example/src/: main.rs
agent_state_machine/: .gitignore  Cargo.toml  README.md
agent_state_machine/examples/: arxiv_test.rs  research_assistant.rs  serpapi_test.rs  simple_chat.rs
agent_state_machine/examples/interactive_storytelling/: README.md  character_agent.rs  dialogue_agent.rs  environment_agent.rs  main.rs  narrative_agent.rs
agent_state_machine/src/: lib.rs  machine.rs  state.rs
basics/simple_agent/: Cargo.toml
basics/simple_agent/src/: main.rs
discord_rig_bot/: Cargo.toml
discord_rig_bot/documents/: Rig_code_samples.md  Rig_examples.md  Rig_faq.md  Rig_guide.md  backup.rs
discord_rig_bot/src/: docs.md  main.rs  rig_agent.rs
entity_extraction_example/: Cargo.toml  README.md
entity_extraction_example/src/: main.rs
flight_search_assistant/: Cargo.toml  README.md
flight_search_assistant/src/: flight_search_tool.rs  main.rs
pid_controller_tuner_example/: Cargo.toml  README.md
pid_controller_tuner_example/src/: main.rs
rag_system/: Cargo.toml  README.md
rag_system/src/: main.rs
rig_concurrent_demo/: Cargo.toml  README.md
rig_concurrent_demo/src/: Concurrent_Processing_with_Rig.rs  main.rs
rss_summarizer/: README.md
rss_summarizer/rss_summarizer/: Cargo.toml
rss_summarizer/rss_summarizer/src/: main.rs
rustbuddy/: Cargo.toml
rustbuddy/src/: main.rs
synthetic_data_example/: Cargo.toml  README.md
synthetic_data_example/src/: main.rs
text_classification_example/: Cargo.toml  README.md
text_classification_example/src/: main.rs
tic-tac-toe_example/: Cargo.toml  README.md
tic-tac-toe_example/src/: main.rs
travel_flights_planning_agent/: Cargo.toml
travel_flights_planning_agent/src/: main.rs
