[package]
name = "agent_state_machine"
version = "0.1.0"
edition = "2021"
authors = ["tachikoma000"]
description = "A state machine implementation for LLM agents"
license = "MIT"
repository = "https://github.com/tachikoma000/agent_state_machine"

[dependencies]
rig-core = "0.2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
serde-xml-rs = "0.6"
quick-xml = { version = "0.36.2", features = ["serialize"] }
# New dependencies for research assistant
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
scraper = "0.20.0"

[dev-dependencies]
tokio-test = "0.4"