[package]
name = "pid_controller_tuner_example"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.0.6"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0"
serde_json = "1.0.108"
tracing = "0.1.40"
futures = "0.3.29"
ordered-float = "4.2.0"
schemars = "0.8.16"
thiserror = "1.0.61"