[package]
name = "hn-rss-summarizer"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.0.6"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
tokio = { version = "1.34", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
rss = "2.0"
regex = "1"